[package]
name = "msh"
version = "0.1.0"
authors = ["Tomek Karwowski <tkarwowski@internships.antmicro.com>"]
edition = "2018"

#[lib]
#crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
rand = "0.8.4"
conch-parser = "0.1.1"

