[package]
name = "shell"
version = "0.1.0"
authors = ["Tomasz Karwowski <tkarwowski@internships.antmicro.com", "Peter Gielda <pgielda@antmicro.com"]
edition = "2018"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
rand = "0.8.4"
conch-parser = "0.1.1"
substring = "1.4.5"
sha-1 = "0.9.8"
clap = "3.0.0-beta.4"
zip = {version = "0.5.13", default-features = false, deflate = true }
iterm2 = { git = "https://github.com/Noskcaj19/iterm2" }
