[package]
authors = [
    "Tomasz Karwowski <tkarwowski@internships.antmicro.com",
    "Peter Gielda <pgielda@antmicro.com",
]
edition = "2018"
name = "wash"
version = "0.1.0"

[dependencies]
clap = "3.0.0-rc.1"
conch-parser = "0.1.1"
color-eyre = "0.5"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.iterm2]
git = "https://github.com/Noskcaj19/iterm2"

[dependencies.zip]
default-features = false
version = "0.5.13"

[profile]
[profile.release]
opt-level = "s"
